module(
    name = "your_project",
    compatibility_level = 1,
)

# Direct dependencies
bazel_dep(name = "boost.system", version = "1.89.0")
bazel_dep(name = "boost.thread", version = "1.89.0")
bazel_dep(name = "boost.asio",   version = "1.89.0")
bazel_dep(name = "boost.json",   version = "1.89.0")

bazel_dep(name = "openssl", version = "3.3.1.bcr.6")
bazel_dep(name = "curl",    version = "8.8.0.bcr.3")

# Optionally, if you have tests / other deps
bazel_dep(name = "googletest", version = "1.14.0")
