module(name = "fast_crypto_options_pricing", version = "1.0.0")

bazel_dep(name = "boost.beast", version = "1.87.0.bcr.1")
bazel_dep(name = "boost.asio", version = "1.87.0.bcr.1")
bazel_dep(name = "boost.system", version = "1.87.0.bcr.1")
bazel_dep(name = "boost.thread", version = "1.87.0")
bazel_dep(name = "boost.json", version = "1.87.0")
bazel_dep(name = "openssl", version = "3.3.1.bcr.6")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")